kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: max-weather
  labels:
    app.kubernetes.io/name: max-weather
---
apiVersion: v1
kind: Namespace
metadata:
  name: max-weather-staging
  labels:
    app.kubernetes.io/name: max-weather
    environment: staging
